12/ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'System.out.println'", "'public'", "'class'", 
                     "'static'", "'void'", "'main'", "'String'", "'int'", 
                     "'System'", "'out'", "'println'", "'if'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'>='", "'='", 
                     "';'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "PUBLIC", "CLASS", "STATIC", 
                      "VOID", "MAIN", "STRING", "INT", "SYSTEM", "OUT", 
                      "PRINTLN", "IF", "ID", "NUM", "CADENA", "SUMA", "RESTA", 
                      "MAYOR_IGUAL", "ASIGNAR", "PUNTOCOMA", "PAR_IZQ", 
                      "PAR_DER", "LLAVE_IZQ", "LLAVE_DER", "COR_IZQ", "COR_DER", 
                      "PUNTO", "WS" ]

    RULE_root = 0
    RULE_classDef = 1
    RULE_methodDef = 2
    RULE_statement = 3
    RULE_declaration = 4
    RULE_tipo = 5
    RULE_assignment = 6
    RULE_ifStmt = 7
    RULE_printStmt = 8
    RULE_printArg = 9
    RULE_expr = 10

    ruleNames =  [ "root", "classDef", "methodDef", "statement", "declaration", 
                   "tipo", "assignment", "ifStmt", "printStmt", "printArg", 
                   "expr" ]

    EOF = Token.EOF
    T__0=1
    PUBLIC=2
    CLASS=3
    STATIC=4
    VOID=5
    MAIN=6
    STRING=7
    INT=8
    SYSTEM=9
    OUT=10
    PRINTLN=11
    IF=12
    ID=13
    NUM=14
    CADENA=15
    SUMA=16
    RESTA=17
    MAYOR_IGUAL=18
    ASIGNAR=19
    PUNTOCOMA=20
    PAR_IZQ=21
    PAR_DER=22
    LLAVE_IZQ=23
    LLAVE_DER=24
    COR_IZQ=25
    COR_DER=26
    PUNTO=27
    WS=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDef(self):
            return self.getTypedRuleContext(ExprParser.ClassDefContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = ExprParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.classDef()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(ExprParser.PUBLIC, 0)

        def CLASS(self):
            return self.getToken(ExprParser.CLASS, 0)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def LLAVE_IZQ(self):
            return self.getToken(ExprParser.LLAVE_IZQ, 0)

        def methodDef(self):
            return self.getTypedRuleContext(ExprParser.MethodDefContext,0)


        def LLAVE_DER(self):
            return self.getToken(ExprParser.LLAVE_DER, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_classDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDef" ):
                listener.enterClassDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDef" ):
                listener.exitClassDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDef" ):
                return visitor.visitClassDef(self)
            else:
                return visitor.visitChildren(self)




    def classDef(self):

        localctx = ExprParser.ClassDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(ExprParser.PUBLIC)
            self.state = 25
            self.match(ExprParser.CLASS)
            self.state = 26
            self.match(ExprParser.ID)
            self.state = 27
            self.match(ExprParser.LLAVE_IZQ)
            self.state = 28
            self.methodDef()
            self.state = 29
            self.match(ExprParser.LLAVE_DER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(ExprParser.PUBLIC, 0)

        def STATIC(self):
            return self.getToken(ExprParser.STATIC, 0)

        def VOID(self):
            return self.getToken(ExprParser.VOID, 0)

        def MAIN(self):
            return self.getToken(ExprParser.MAIN, 0)

        def PAR_IZQ(self):
            return self.getToken(ExprParser.PAR_IZQ, 0)

        def STRING(self):
            return self.getToken(ExprParser.STRING, 0)

        def COR_IZQ(self):
            return self.getToken(ExprParser.COR_IZQ, 0)

        def COR_DER(self):
            return self.getToken(ExprParser.COR_DER, 0)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def PAR_DER(self):
            return self.getToken(ExprParser.PAR_DER, 0)

        def LLAVE_IZQ(self):
            return self.getToken(ExprParser.LLAVE_IZQ, 0)

        def LLAVE_DER(self):
            return self.getToken(ExprParser.LLAVE_DER, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatementContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatementContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_methodDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDef" ):
                listener.enterMethodDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDef" ):
                listener.exitMethodDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDef" ):
                return visitor.visitMethodDef(self)
            else:
                return visitor.visitChildren(self)




    def methodDef(self):

        localctx = ExprParser.MethodDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_methodDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(ExprParser.PUBLIC)
            self.state = 32
            self.match(ExprParser.STATIC)
            self.state = 33
            self.match(ExprParser.VOID)
            self.state = 34
            self.match(ExprParser.MAIN)
            self.state = 35
            self.match(ExprParser.PAR_IZQ)
            self.state = 36
            self.match(ExprParser.STRING)
            self.state = 37
            self.match(ExprParser.COR_IZQ)
            self.state = 38
            self.match(ExprParser.COR_DER)
            self.state = 39
            self.match(ExprParser.ID)
            self.state = 40
            self.match(ExprParser.PAR_DER)
            self.state = 41
            self.match(ExprParser.LLAVE_IZQ)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 12674) != 0):
                self.state = 42
                self.statement()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(ExprParser.LLAVE_DER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(ExprParser.DeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(ExprParser.AssignmentContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(ExprParser.PrintStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(ExprParser.IfStmtContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ExprParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 54
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.declaration()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.assignment()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.printStmt()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                self.ifStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(ExprParser.TipoContext,0)


        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def ASIGNAR(self):
            return self.getToken(ExprParser.ASIGNAR, 0)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def PUNTOCOMA(self):
            return self.getToken(ExprParser.PUNTOCOMA, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = ExprParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.tipo()
            self.state = 57
            self.match(ExprParser.ID)
            self.state = 58
            self.match(ExprParser.ASIGNAR)
            self.state = 59
            self.expr(0)
            self.state = 60
            self.match(ExprParser.PUNTOCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ExprParser.INT, 0)

        def STRING(self):
            return self.getToken(ExprParser.STRING, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = ExprParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            _la = self._input.LA(1)
            if not(_la==7 or _la==8):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def ASIGNAR(self):
            return self.getToken(ExprParser.ASIGNAR, 0)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def PUNTOCOMA(self):
            return self.getToken(ExprParser.PUNTOCOMA, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = ExprParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(ExprParser.ID)
            self.state = 65
            self.match(ExprParser.ASIGNAR)
            self.state = 66
            self.expr(0)
            self.state = 67
            self.match(ExprParser.PUNTOCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ExprParser.IF, 0)

        def PAR_IZQ(self):
            return self.getToken(ExprParser.PAR_IZQ, 0)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def PAR_DER(self):
            return self.getToken(ExprParser.PAR_DER, 0)

        def LLAVE_IZQ(self):
            return self.getToken(ExprParser.LLAVE_IZQ, 0)

        def LLAVE_DER(self):
            return self.getToken(ExprParser.LLAVE_DER, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatementContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatementContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = ExprParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(ExprParser.IF)
            self.state = 70
            self.match(ExprParser.PAR_IZQ)
            self.state = 71
            self.expr(0)
            self.state = 72
            self.match(ExprParser.PAR_DER)
            self.state = 73
            self.match(ExprParser.LLAVE_IZQ)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 12674) != 0):
                self.state = 74
                self.statement()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(ExprParser.LLAVE_DER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PAR_IZQ(self):
            return self.getToken(ExprParser.PAR_IZQ, 0)

        def printArg(self):
            return self.getTypedRuleContext(ExprParser.PrintArgContext,0)


        def PAR_DER(self):
            return self.getToken(ExprParser.PAR_DER, 0)

        def PUNTOCOMA(self):
            return self.getToken(ExprParser.PUNTOCOMA, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):

        localctx = ExprParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_printStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(ExprParser.T__0)
            self.state = 83
            self.match(ExprParser.PAR_IZQ)
            self.state = 84
            self.printArg()
            self.state = 85
            self.match(ExprParser.PAR_DER)
            self.state = 86
            self.match(ExprParser.PUNTOCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintArgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CADENA(self):
            return self.getToken(ExprParser.CADENA, 0)

        def SUMA(self):
            return self.getToken(ExprParser.SUMA, 0)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_printArg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintArg" ):
                listener.enterPrintArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintArg" ):
                listener.exitPrintArg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintArg" ):
                return visitor.visitPrintArg(self)
            else:
                return visitor.visitChildren(self)




    def printArg(self):

        localctx = ExprParser.PrintArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_printArg)
        self._la = 0 # Token type
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(ExprParser.CADENA)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==16:
                    self.state = 89
                    self.match(ExprParser.SUMA)
                    self.state = 90
                    self.expr(0)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(ExprParser.NUM, 0)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def CADENA(self):
            return self.getToken(ExprParser.CADENA, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def SUMA(self):
            return self.getToken(ExprParser.SUMA, 0)

        def RESTA(self):
            return self.getToken(ExprParser.RESTA, 0)

        def MAYOR_IGUAL(self):
            return self.getToken(ExprParser.MAYOR_IGUAL, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.state = 97
                self.match(ExprParser.NUM)
                pass
            elif token in [13]:
                self.state = 98
                self.match(ExprParser.ID)
                pass
            elif token in [15]:
                self.state = 99
                self.match(ExprParser.CADENA)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 111
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = ExprParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 102
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 103
                        self.match(ExprParser.SUMA)
                        self.state = 104
                        self.expr(7)
                        pass

                    elif la_ == 2:
                        localctx = ExprParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 105
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 106
                        self.match(ExprParser.RESTA)
                        self.state = 107
                        self.expr(6)
                        pass

                    elif la_ == 3:
                        localctx = ExprParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 108
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 109
                        self.match(ExprParser.MAYOR_IGUAL)
                        self.state = 110
                        self.expr(5)
                        pass

             
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[10] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 4)
         




